<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <group android:menuCategory="container">
        <item
            android:id="@+id/action_change_settings"
            android:title="@string/change_language_settings"
            app:showAsAction="never"/>
        <item
            android:id="@+id/view_fav_movie"
            android:title="@string/menu_fav_movie"
            app:showAsAction="never"/>
        <item
            android:id="@+id/view_fav_tvshow"
            android:title="@string/menu_fav_tvshow"
            app:showAsAction="never"/>
        <item
            android:id="@+id/setting_reminder"
            android:title="@string/set_reminder"
            app:showAsAction="never"/>
    </group>
</menu>